--- a/index.html
+++ b/index.html
@@ -19,15 +19,55 @@
             </nav>
         </header>
 
-        <main>
-            <aside>
+        <main class="d-flex">
+            <aside class="d-flex flex-column">
+                <div id="aside-top" class="overflow-hidden d-flex flex-column">
+
+                </div>
+
+                <div id="aside-bottom">
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
 
             </aside>
-            <div class="container-fluid">
+            <div id="corpo">
+                <div id="top-bar">
 
+                </div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
 
             </div>
-
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
