--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <header>
+            <!------- NAVBAR ------->
             <nav>
 
 
@@ -20,53 +21,47 @@
         </header>
 
         <main class="d-flex">
+            <!------- ASIDE ------->
             <aside class="d-flex flex-column">
+                <!------- ASIDE-TOP ------->
                 <div id="aside-top" class="overflow-hidden d-flex flex-column">
 
                 </div>
-
+                <!------- ASIDE-BOTTOM ------->
                 <div id="aside-bottom">
                     <p>Lorem ipsum dolor sit amet consectetur</p>
                 </div>
 
             </aside>
-            <div id="corpo">
-                <div id="top-bar">
-
+            <div id="dashboard" class="container-fluid">
+                <!------- TOP BAR AZZURRA ------->
+                <div id="top-bar" class="row row-cols-1 row-cols-md-3 flex-wrap">
+                    <!------- NUMERO STUDENTI ------->
+                    <div id="nuovo-studente" class="col">
+                        <p>nuovo-studente Lorem ipsum dolor sit amet consectetur</p>
+                    </div>
+                    <!------- BOOLEAN PIANO ------->
+                    <div class="col">
+                        <p>Boolean Piano</p>
+                    </div>
+                    <!------- NUMERO STUDENTI ------->
+                    <div class="col">
+                        <p>Numero studenti</p>
+                    </div>
                 </div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat temporibus vitae ab blanditiis unde ducimus adipisci quod rem, quibusdam nihil repudiandae eveniet sunt. Rem, maxime cumque consectetur obcaecati odit quibusdam.</div>
 
+                <!------- CORPO ------->
+                <div id="corpo" class="row row-lg-2">
+                    <!------- COLONNA SX ------->
+                    <div class="col-12 col-lg-9">
+                        <h1>col 1</h1>
+                    </div>
+                    <!------- COLONNA DX ------->
+                    <div class="col-12 col-lg-3">
+                        <h1>col 2</h1>
+                        
+                    </div>
+                </div>
             </div>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
