--- a/index.html
+++ b/index.html
@@ -51,16 +51,30 @@
             <!------- ASIDE ------->
             <aside class="d-flex flex-column">
                 <!------- ASIDE-TOP ------->
-                <div id="aside-top" class="overflow-hidden d-flex flex-column">
-
+                <div id="aside-top" class="d-flex flex-column h-100">
+                    <a href="#">
+                        <i class="bi bi-house-door-fill"></i>
+                        <span class="ms_hidden"> Home</span>
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-bar-chart-steps"></i>
+                        <span class="ms_hidden"> Stats</span>
+                    </a>
+                    <a href="#">
+                        <i class="bi bi-reception-4"></i>
+                        <span class="ms_hidden"> Signals</span>
+                    </a>
                 </div>
                 <!------- ASIDE-BOTTOM ------->
                 <div id="aside-bottom">
-
+                    <a href="#">
+                        <i class="bi bi-gear-fill"></i>
+                        <span class="ms_hidden"> Admin</span>
+                    </a>
                 </div>
 
             </aside>
-            <div id="dashboard" class="container-fluid">
+            <div id="dashboard" class="container-fluid overflow-y-scroll">
                 <!------- TOP BAR AZZURRA ------->
                 <div id="top-bar" class="row row-cols-1 row-cols-md-3 flex-wrap">
                     <!------- NUMERO STUDENTI ------->
