--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body class="p-0 m-0">
         <header>
             <!------- NAVBAR ------->
             <nav class="navbar navbar-expand bg-body-tertiary">
                 <div class="container-fluid">
                   <a id="logo" class="navbar-brand" href="#"><img src="img/logo.svg" alt="Logo"></a>
                   <a id="logo_mob" class="navbar-brand" href="#"><img src="img/mobile-logo.png" alt="Logo"></a>
-                  <div class="d-flex w-100" role="search">
-                    <span class="input-group-text"><i class="bi bi-search-heart"></i></span>
-                    <input type="text" class="form-control" placeholder="Username">
+                  <div class="input-group d-flex w-100" role="search">
+                    <span class="input-group-text border-end-0"><i class="bi bi-search-heart"></i></span>
+                    <input type="text" class="form-control border-start-0" placeholder="Prova a cercare: Lezioni di Laravel">
                   </div>
                   <ul class="navbar-nav mb-2">
                     <li class="nav-item ms_hidden">
@@ -76,10 +76,107 @@
             </aside>
             <div id="dashboard" class="container-fluid overflow-y-scroll">
                 <!------- TOP BAR AZZURRA ------->
-                <div id="top-bar" class="row row-cols-1 row-cols-md-3 flex-wrap">
+                <div id="top-bar" class="row row-cols-1 row-cols-md-3 flex-wrap text-white py-3">
                     <!------- NUMERO STUDENTI ------->
                     <div id="nuovo-studente" class="col">
-                        <p>nuovo-studente Lorem ipsum dolor sit amet consectetur</p>
+                        <span>Nuovo studente</span>
+                        <a class="btn btn-outline-light" data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvasExample">+</a>
+                          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasExampleLabel">
+                            <div class="offcanvas-header">
+                              <h5 class="offcanvas-title" id="offcanvasExampleLabel">Inserisci un nuovo studente</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <form data-bitwarden-watching="1">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="mb-3 col">
+                                              <label for="Nome" class="form-label">Nome</label>
+                                              <input type="text" class="form-control" aria-describedby="emailHelp">
+                                            </div>
+                                            <div class="mb-3 col">
+                                              <label for="Cognome" class="form-label">Cognome</label>
+                                              <input type="text" class="form-control">
+                                            </div>
+                                          </div>
+                                          <div class="row">
+                                            <div class="col">
+                                              <label for="exampleInputEmail1" class="form-label">Email</label>
+                                              <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">@</span>
+                                                <input type="email" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                              </div>
+                                            </div>
+                                            <div class="col">
+                                              <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div class="row">
+                                            <div class="col">
+                                              <label for="exampleInputEmail1" class="form-label">Indirizzo Email</label>
+                                              <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon1">@</span>
+                                                <input type="email" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                                              </div>
+                                            </div>
+                                            <div class="col">
+                                              <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="Password">
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div class="row">
+                                            <div class="mb-3">
+                                              <label for="Indirizzo" class="form-label">Indirizzo</label>
+                                              <input type="text" class="form-control" id="street" aria-describedby="emailHelp">
+                                             </div>
+                                          </div>
+                                          <div class="row">
+                                            <div class="col">
+                                              <div class="mb-3">
+                                                <label for="citta" class="form-label">Città</label>
+                                                <input type="text" class="form-control" id="city" aria-describedby="emailHelp">
+                                              </div>
+                                            </div>
+                                            <div class="col">
+                                              <div class="mb-3">
+                                                <label for="stato" class="form-label">Stato</label>
+                                                <select class="form-select" aria-label="Default select example">
+                                                  <option selected>Scegli...</option>
+                                                  <option value="1">One</option>
+                                                  <option value="2">Two</option>
+                                                  <option value="3">Three</option>
+                                              </select>
+                                              </div>
+                                            </div>
+                                            <div class="col">
+                                              <div class="mb-3">
+                                                <label for="cap" class="form-label">CAP</label>
+                                                <input type="text" class="form-control" id="zip" aria-describedby="emailHelp">
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div class="row">
+                                            <div class="col">
+                                              <div class="input-group mb-3">
+                                                <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div class="mb-3 form-check">
+                                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                            <label class="form-check-label" for="exampleCheck1">Seleziona per proseguire</label>
+                                          </div>
+                                          <button type="submit" class="btn btn-primary">Salva</button>
+                                          <button type="reset" class="btn btn-warning">Svuota</button>
+                                    </div>
+                                </form>           
+                            </div>
+                          </div>
                     </div>
                     <!------- BOOLEAN PIANO ------->
                     <div class="col">
@@ -87,7 +184,8 @@
                     </div>
                     <!------- NUMERO STUDENTI ------->
                     <div class="col">
-                        <p>Numero studenti</p>
+                        <p>Studenti online negli ultimi 30 minuti</p>
+                        <span class="fs-4">125</span>
                     </div>
                 </div>
                 
